Fix description overflow

--- a/frontend/src/components/SpotDetails/SpotDetails.css
+++ b/frontend/src/components/SpotDetails/SpotDetails.css
@@ -54,6 +54,7 @@
 
 #spot-details-card-about-blurb {
     margin-right: 20px;
+    overflow-wrap: anywhere;
 }
 
 #spot-details-host-name {
